# swaggy-stacks

./: .cursorrules  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  AI_TRADING_SYSTEM_README.md  AUDIT_IMPROVEMENTS.md  BACKUP_LOG.md  CLAUDE.md  CLAUDE_INIT.md  PHASE_4_COMPLETE.md  PRE_MARKET_VALIDATION_CHECKLIST.md  PRODUCTION_READINESS.md  README.md  RUNPOD_DEPLOYMENT.md  RUNPOD_QUICK_SETUP.md  SECURITY.md  backtest_markov.py  deploy-simple-runpod.sh  deploy-to-runpod.sh  docker-compose.runpod.yml  docker-compose.yml  env.example  live_agents_real.py  live_trading_agents.py  morning_start.sh  production_validation.py  quick_review.sh  refresh_docs.sh  run_ai_demo.py  runpod-setup.sh  runpod.dockerfile  setup_ollama_models.py  shrimp-rules.md  test_ai_system.py  test_friday_prices.py  test_live_trading_system.py  test_minimal_trading.py  test_system.py
backend/: .flake8  AGENT_SYSTEM.md  DELETION_REPORT.md  DEPENDENCIES.md  Dockerfile  ML_DEPENDENCY_RESOLUTION.md  agents_demo.py  alembic.ini  crypto_agent_demo.py  crypto_symbol_explorer.py  demo_agent_system.py  instant_bitcoin_trade.py  integrated_trading_system.py  live_ai_trading_demo.py  live_bitcoin_agent_system.py  live_crypto_trading_system.py  live_trading_coordinator.py  modern_bitcoin_trader.py  notify.py  pyproject.toml  real_agent_coordination_system.py  real_agent_dashboard.py  real_ai_agents.py  real_crypto_trader_v2.py  real_stock_trader.py  requirements-dev.txt  requirements.txt  requirements_core.txt  requirements_temp.txt  run_production.py  simple_agent_dashboard.py  simple_real_trader.py  simplified_real_intelligence_system.py  test_coordination.py  test_modern_trader.py  test_monitoring_simple.py  test_regime_detection.py  test_streaming.py  test_triggers.py  ultimate_crypto_trading_system.py  (+2 more)
backend/.taskmaster/docs/: prd.txt
backend/app/: __init__.py  agent_system.py  main.py
backend/app/agents/: __init__.py  base_agent.py  execution_agent.py  learning_agent.py  research_agent.py  risk_agent.py  strategy_agent.py
backend/app/ai/: __init__.py  base_agent.py  consensus_engine.py  coordination_hub.py  deepseek_trade_orchestrator.py  llm_router.py  market_analyst_service.py  mlx_config.py  model_serving_strategy.py  ollama_client.py  options_strategy_selector.py  performance_coach_service.py  public_trading_client.py  pydantic_base_agent.py  pydantic_options_agent.py  pydantic_trading_agents.py  risk_advisor_service.py  strategy_optimizer_service.py  trading_advisor.py  trading_agents.py  trading_agents_original.py  trading_intelligence_hub.py
backend/app/analysis/: __init__.py  backtesting_framework.py  consolidated_markov_system.py  core_feedback.py  enhanced_markov_system.py  indicator_factory.py  integrated_alpha_detector.py  llm_predictors.py  markov_analyzer.py  markov_system.py  (+4 more)
backend/backend/: test_anomaly_validation.py
backend/migrations/: env.py
backend/scripts/: validate_trading_system.py
backend/tests/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_analysis.py  test_api.py  test_core_metrics.py  test_ml_abstraction.py  test_redis_caching_integration.py  test_reinforcement_learning.py  test_simple_auth.py  test_trading.py  test_unsupervised_integration.py  test_unsupervised_monitoring.py
(+490 files in other folders)
