[project]
name = "swaggy-stacks"
version = "1.0.0"
description = "Production-ready algorithmic trading system with DeepAgents + LangGraph"
requires-python = ">=3.13"
dependencies = [
    # AI Agent Framework - DeepAgents + LangGraph
    "anthropic>=0.40.0,<1.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "langchain-community>=1.0.0,<2.0.0",

    # Additional AI Providers
    "openai>=1.0.0,<2.0.0",  # For OpenRouter multi-model access

    # State Management & Persistence
    "langgraph-checkpoint>=1.0.0,<2.0.0",
    "langgraph-checkpoint-postgres>=1.0.0,<2.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | .taskmaster
  | .claude
  | .cursor
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = [".git", "__pycache__", "venv", ".venv", ".taskmaster", ".claude", ".cursor"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv/",
    ".venv/",
    ".taskmaster/",
    ".claude/",
    ".cursor/",
    "tests/"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]